--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,19 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+
+target
+.idea
+*.iml
+dependency-reduced-pom.xml
+
+# JRebel file
+rebel.xml
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
