--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -8,9 +8,11 @@ HeartBtInt=30
 SenderCompID=7d8f8655-ce10-428d-b10a-b9dcc25b352d
 UseDataDictionary=Y
 SocketConnectHost=10.200.173.189
+#SocketConnectHost=localhost
 
 [session]
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
 SocketConnectPort=30033
+#SocketConnectPort=1443
 TargetCompID=GSX
