--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -4,15 +4,19 @@ FileLogPath=target/data/gsx/client/log
 ConnectionType=initiator
 StartTime=00:00:00
 EndTime=00:00:00
+#心跳时间s
 HeartBtInt=30
+#accesskey
 SenderCompID=7d8f8655-ce10-428d-b10a-b9dcc25b352d
 UseDataDictionary=Y
+#服务器IP
 SocketConnectHost=10.200.173.189
 #SocketConnectHost=localhost
 
 [session]
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
+#服务器TCP端口
 SocketConnectPort=30033
 #SocketConnectPort=1443
 TargetCompID=GSX
