--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -10,13 +10,12 @@ HeartBtInt=30
 SenderCompID=7d8f8655-ce10-428d-b10a-b9dcc25b352d
 UseDataDictionary=Y
 #服务器IP
-SocketConnectHost=10.200.173.189
-#SocketConnectHost=localhost
+#SocketConnectHost=10.200.174.57
+SocketConnectHost=localhost
 
 [session]
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
 #服务器TCP端口
-SocketConnectPort=30033
-#SocketConnectPort=1443
+SocketConnectPort=1443
 TargetCompID=GSX
