restful client test

--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -10,12 +10,14 @@ HeartBtInt=30
 SenderCompID=7d8f8655-ce10-428d-b10a-b9dcc25b352d
 UseDataDictionary=Y
 #服务器IP
-#SocketConnectHost=10.200.174.57
-SocketConnectHost=localhost
+SocketConnectHost=10.200.174.57
+#SocketConnectHost=localhost
+ReconnectInterval=3
 
 [session]
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
 #服务器TCP端口
-SocketConnectPort=1443
+#SocketConnectPort=1443
+SocketConnectPort=30010
 TargetCompID=GSX
