--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -7,10 +7,11 @@ EndTime=00:00:00
 #心跳时间s
 HeartBtInt=30
 #accesskey
-SenderCompID=7d8f8655-ce10-428d-b10a-b9dcc25b352d
+SenderCompID=291eb0dc-d65e-4c30-9e56-fb77a60fbe89
 UseDataDictionary=Y
 #服务器IP
-SocketConnectHost=10.200.174.57
+#SocketConnectHost=10.200.174.57
+SocketConnectHost=10.200.173.189
 #SocketConnectHost=localhost
 ReconnectInterval=3
 
@@ -18,6 +19,7 @@ ReconnectInterval=3
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
 #服务器TCP端口
+#SocketConnectPort=30010
+SocketConnectPort=30033
 #SocketConnectPort=1443
-SocketConnectPort=30010
 TargetCompID=GSX
