--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -9,17 +9,21 @@ HeartBtInt=30
 #accesskey
 SenderCompID=291eb0dc-d65e-4c30-9e56-fb77a60fbe89
 UseDataDictionary=Y
-#服务器IP
-SocketConnectHost=10.200.174.57
+#GSX测试服务器IP
+#SocketConnectHost=10.200.174.57
+#GSX开发服务器IP
 #SocketConnectHost=10.200.173.189
-#SocketConnectHost=localhost
+#GBX测试服务器IP
+SocketConnectHost=10.200.174.5
 ReconnectInterval=3
 
 [session]
 DataDictionary=FIX44_GSX.xml
 BeginString=FIX.4.4
-#服务器TCP端口
-SocketConnectPort=30010
+#GSX测试服务器TCP端口
+#SocketConnectPort=30010
+#GSX开发服务器TCP端口
 #SocketConnectPort=30033
-#SocketConnectPort=1443
+#GBX测试服务器TCP端口
+SocketConnectPort=1443
 TargetCompID=GSX
