--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -14,7 +14,9 @@ UseDataDictionary=Y
 #GSX开发服务器IP
 #SocketConnectHost=10.200.173.189
 #GBX测试服务器IP
-SocketConnectHost=10.200.174.5
+SocketConnectHost=10.200.174.4
+#本地开发环境IP
+#SocketConnectHost=localhost
 ReconnectInterval=3
 
 [session]
@@ -26,4 +28,7 @@ BeginString=FIX.4.4
 #SocketConnectPort=30033
 #GBX测试服务器TCP端口
 SocketConnectPort=1443
+#GSX ID
 TargetCompID=GSX
+#GBX ID
+#TargetCompID=GBX
