--- a/quickfix-client/src/main/resources/fix-client.cfg
+++ b/quickfix-client/src/main/resources/fix-client.cfg
@@ -7,7 +7,7 @@ EndTime=00:00:00
 #心跳时间s
 HeartBtInt=30
 #accesskey
-SenderCompID=291eb0dc-d65e-4c30-9e56-fb77a60fbe89
+SenderCompID=0918c446-b73e-4cef-92e6-9ffb2971f800
 UseDataDictionary=Y
 #GSX测试服务器IP
 #SocketConnectHost=10.200.174.57
@@ -15,6 +15,8 @@ UseDataDictionary=Y
 #SocketConnectHost=10.200.173.189
 #GBX测试服务器IP
 SocketConnectHost=10.200.174.5
+#GBX预发服务器IP
+SocketConnectHost=172.23.1.83
 #本地开发环境IP
 #SocketConnectHost=localhost
 ReconnectInterval=3
